Refactor: Remove unused imports and improve code formatting
Removed several unused imports and streamlined code comments across multiple files, including repository interfaces, service implementations, DTOs, and controllers. Enhanced code readability by fixing formatting issues and unifying documentation style.